force-app/main/default/objects/Opportunity/fields/Payment_Last_Sync_At__c.field-meta.xml
<CustomField>
    <fullName>Payment_Last_Sync_At__c</fullName>
    <label>Payment Last Sync At</label>
    <type>DateTime</type>
</CustomField>