force-app/main/default/objects/Opportunity/fields/Payment_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_URL__c</fullName>
    <label>Payment Link URL</label>
    <type>Url</type>
</CustomField>