force-app/main/default/objects/Opportunity/fields/Payment_ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>Payment_ReferenceId__c</fullName>
    <label>Payment ReferenceId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>