force-app/main/default/objects/Opportunity/validationRules/Stage_Closed_Won_Requirements.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_Closed_Won_Requirements</fullName>
    <active>true</active>
    <description>An opportunity can only be closed-won when it has met all of the following requirements:
- Payment Status = Paid
- Payment Link &lt;&gt; null</description>
    <errorConditionFormula>AND(
    IsWon,
    ISCHANGED(StageName),

    OR(
        TEXT( Payment_Status__c ) &lt;&gt; &quot;Paid&quot;,
        ISBLANK( Payment_Link_URL__c )  
    )
)</errorConditionFormula>
    <errorMessage>Complete the payment process and ensure the payment status is &quot;Paid&quot; before moving this opportunity to Closed-Won.</errorMessage>
</ValidationRule>